force-app/main/default/objects/Attachment__c/Attachment__c.object-meta.xml
<CustomObject>
    <description>Used for exposing files on portal</description>
    <label>Portal Attachment</label>
    <nameField>
        <displayFormat>ATT{00000}</displayFormat>
        <label>Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>