force-app/main/default/objects/Attachment__c/fields/Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event Resource</fullName>
            </value>
            <value>
                <fullName>Profile Image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>