force-app/main/default/objects/Attachment__c/fields/AttachmentID__c.field-meta.xml
<CustomField>
    <fullName>AttachmentID__c</fullName>
    <label>AttachmentID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>