force-app/main/default/objects/Attachment__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>