force-app/main/default/objects/Attachment__c/fields/Portal_Description__c.field-meta.xml
<CustomField>
    <fullName>Portal_Description__c</fullName>
    <label>Portal Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>