force-app/main/default/objects/Attachment__c/fields/Portal_Title__c.field-meta.xml
<CustomField>
    <fullName>Portal_Title__c</fullName>
    <label>Portal Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>